# Rust-Microproject

./: README.md
Demos_And_Lessons/01-setup-and-blinky/: README.md
Demos_And_Lessons/01-setup-and-blinky/c/main/: blinky.c
Demos_And_Lessons/01-setup-and-blinky/rust/: Cargo.toml
Demos_And_Lessons/01-setup-and-blinky/rust/src/: main.rs
Demos_And_Lessons/02-ownership-of-peripherals/: README.md
Demos_And_Lessons/02-ownership-of-peripherals/c/: CMakeLists.txt
Demos_And_Lessons/02-ownership-of-peripherals/c/main/: CMakeLists.txt  button.c  button.h  led.c  led.h  main.c
Demos_And_Lessons/02-ownership-of-peripherals/rust/: Cargo.toml
Demos_And_Lessons/03-borrowing/: README.md
Demos_And_Lessons/03-borrowing/rust/: Cargo.toml
Demos_And_Lessons/03-borrowing/rust/.cargo/: config.toml
Demos_And_Lessons/03-borrowing/rust/src/: main.rs
Demos_And_Lessons/04-option-result-and-enums/: README.md
Demos_And_Lessons/04-option-result-and-enums/rust/: Cargo.toml
Demos_And_Lessons/04-option-result-and-enums/rust/src/: main.rs
Demos_And_Lessons/05 - freertos/: .gitignore  Cargo.toml  README.md  sdkconfig.defaults
Demos_And_Lessons/05 - freertos/server/: Cargo.toml
Demos_And_Lessons/05 - freertos/server/src/: index.html  main.rs
Demos_And_Lessons/05 - freertos/src/: http_client.rs  main.rs  wifi.rs
E-Stop/: Cargo.toml  README.md
E-Stop/handheld/: Cargo.toml
E-Stop/handheld/.cargo/: config.toml
E-Stop/handheld/src/: button.rs  main.rs  tx.rs
E-Stop/pod/: Cargo.toml
E-Stop/pod/src/: main.rs  radio.rs  usb.rs
E-Stop/shared/: Cargo.toml
E-Stop/shared/src/: cobs.rs  frame.rs  lib.rs  safety.rs  state.rs
Project ESP32S3/: README.md
