[package]
name = "borrowing"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "broken"
path = "src/bin/broken.rs"

[dependencies]
esp-hal = { version = "1.1.1", features = ["esp32s3", "unstable"] }
esp-backtrace = { version = "0.19.0", features = [
    "esp32s3",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.17.0", features = ["esp32s3", "log-04"] }
log = "0.4"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false

[profile.dev]
debug = 2
opt-level = "s"
